CHATS_SIT/force-app/main/default/objects/Manual_Claim_File__c.object
<CustomObject>
    <fields>
        <fullName>File_Extension__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Extension</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Identifier</label>
        <length>255</length>
        <type>Text</type>

    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>File Size</label>
        <length>18</length>
        <type>Text</type>

    </fields>
    <fields>
        <fullName>Provider_Manual_Claim__c</fullName>
        <label>Provider Manual Claim</label>
        <referenceTo>Provider_Manual_Claim__c</referenceTo>
        <relationshipLabel>Manual Claim Files</relationshipLabel>
        <relationshipName>Manual_Claim_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Manual Claim File</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual Claim File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manual Claim File</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>